; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_internal.c_rj_real_init.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_internal.c_rj_real_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_ctx = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.int_ctx*, i32)* @rj_real_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rj_real_init(%struct.int_ctx* %0, i32 %1) #0 {
  %3 = alloca %struct.int_ctx*, align 8
  %4 = alloca i32, align 4
  store %struct.int_ctx* %0, %struct.int_ctx** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %6 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %5, i32 0, i32 2
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %9 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %12 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = mul nsw i32 %13, 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @aes_set_key(i32* %7, i32 %10, i32 %14, i32 %15)
  ret i32 0
}

declare dso_local i32 @aes_set_key(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
